# UndercoverMWPhysics

./: .gitignore  CMakeLists.txt  MWCarTuning.cpp  MWCarTuning.h  README.md  UMathEx.h  UndercoverMWPhysics.vcxproj  main.cpp  mw.h
.github/workflows/: msbuild.yml
CarDataDump/: ast_db9_stk_06.conf  aud_r8_stk_08.conf  aud_r8_stk_08_speedtest.conf  aud_rs4_stk_08.conf  aud_s5_stk_08_m17.conf  aud_tt_stk_07.conf  aud_tt_stk_07_m11.conf  bmw_e26procar.conf  bmw_m3_e46_03.conf  bmw_m3_e92_08.conf  bmw_m6_stk_08.conf  bmw_m6_stk_08_boss.conf  bmw_z4_m_07.conf  bug_vey_164_08.conf  che_cam_ss_67.conf  che_vel_ss_70.conf  che_vet_sti_67.conf  che_vet_z06_06_m26.conf  chr_300_srt_08.conf  civichb.conf  dod_cha_con_06.conf  dod_cha_stk_71.conf  dod_chr_bee_07.conf  dod_chr_stk_69.conf  dod_vip_srt_08_boss.conf  for_esc_rs_96.conf  for_foc_st_07.conf  for_gt_stk_06_goon.conf  for_gt_stk_06_m32.conf  for_mus_gt_06.conf  for_pum_rac_99.conf  for_shl_gt_08.conf  for_shl_ter_08.conf  gallardosl08.conf  hol_com_hsv_96.conf  hon_crx_sir_95.conf  koe_ccx_stk_06.conf  lam_gal_560_09.conf  lam_gal_560_09_boss.conf  lam_mur_lp_06_m33.conf  (+44 more)
CarDataDump/orig/: 911gt2.conf  911turbo.conf  911turbo_top.conf  997s.conf  997s_top.conf  a3.conf  a3_top.conf  a4.conf  a4_top.conf  bmwm3gtr.conf  bmwm3gtr_top.conf  bmwm3gtre46_top.conf  camaro.conf  camaro_top.conf  carreragt.conf  carreragt_top.conf  caymans.conf  caymans_top.conf  clio.conf  clio_top.conf  clk500.conf  clk500_top.conf  cobaltss.conf  cobaltss_top.conf  corvette.conf  corvette_top.conf  corvettec6r_top.conf  cs_cts_traffictruck.conf  cs_cts_traffictruck_top.conf  cs_trafcement.conf  cs_trafgarb_top.conf  cts.conf  cts_top.conf  db9.conf  db9_top.conf  eclipsegt.conf  eclipsegt_top.conf  elise.conf  elise_top.conf  fordgt.conf  (+35 more)
CarDataDump/orig_carbon/: 240sx.conf  240sx_top.conf  300c.conf  300c_top.conf  350z.conf  350z_top.conf  997gt3rs.conf  997gt3rs_top.conf  997tt.conf  997tt_top.conf  angie_casino_top.conf  angie_top.conf  bmwm3gtre46.conf  bmwm3gtre46_crosschase.conf  bmwm3gtre46_crosschase_top.conf  bmwm3gtre46_top.conf  brera.conf  brera_top.conf  camaro.conf  camaro_top.conf  camaron.conf  camaron_top.conf  carreragt.conf  carreragt_top.conf  caymans.conf  caymans_top.conf  ccx.conf  ccx_top.conf  challenger71.conf  challenger71_top.conf  challengern.conf  challengern_top.conf  charger06.conf  charger06_top.conf  charger69.conf  charger69_top.conf  chevelle.conf  chevelle_top.conf  clio.conf  clio_top.conf  (+87 more)
decomp/: AverageWindow.h  MWChassis.cpp  SuspensionRacer.cpp  SuspensionRacer.h
